--- a/resume_alex.qmd
+++ b/resume_alex.qmd
@@ -1,6 +1,6 @@
 ---
-format: 
-  pdf: 
+format:
+  pdf:
     documentclass: article
     geometry:
       - top=10mm
@@ -11,7 +11,7 @@ format:
     fontfamily: libertine
     colorlinks: true
     fontsize: '16'
-    include-in-header: 
+    include-in-header:
       text: |
         \usepackage{multicol}
         \usepackage{lipsum}
@@ -22,10 +22,10 @@ format:
         \setlength{\columnsep}{3em}
 ---
 <!-- TITLE -->
-\begin{huge}\begin{center}{\bf ALEX BASS}\end{center}\end{huge}
+\begin{huge}\begin{center}{\bf Montaque Reynolds}\end{center}\end{huge}
 
 <!-- CONTACT INFO -->
-\begin{center}hello@alexbass.me ∙ \href{https://alexbass.me/projects.html}{Portfolio} ∙ \href{https://github.com/acbass49}{Github} ∙ \href{https://www.linkedin.com/in/alex-bass-4a7465161/}{LinkedIn}
+\begin{center}montaque.reynolds@gmail.com ∙ \href{https://schf-org.github.io/SCHF-Org/}{Portfolio} ∙ \href{https://github.com/}{Github} ∙ \href{https://www.linkedin.com/in/alex-bass-4a7465161/}{LinkedIn}
 \end{center}
 \vspace{15pt}
 
@@ -35,26 +35,45 @@ format:
   \vspace{3pt}
   \hrule
   \begin{multicols}{2}
-    \begin{flushleft}{\bf University of Virginia}\end{flushleft}
-    \begin{flushright}Charlottesville, VA\end{flushright}
+    \begin{flushleft}{\bf Saint Louis University}\end{flushleft}
+    \begin{flushright}Saint Louis, MO\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}Master of Science: Data Science\end{flushleft}
+    \begin{flushleft}Doctor of Philosophy: Philosophy\end{flushleft}
   \end{multicols}
 \end{large}
+\vspace{-0.17cm}
+\begin{flushleft}Dissertation: Emotional Data and Spiritual Meaning, An analysis of the moral expression of sentiment in fiction\end{flushleft}
+\vspace{-0.17cm}
+\begin{flushleft}\emph{AOS:} Phil Mind, Social and Moral Epistemology\end{flushleft}
 
 \vspace{0.05cm}
 
 <!-- EDUCATION: 2ND BULLET -->
 \begin{large}
   \begin{multicols}{2}
-    \begin{flushleft}{\bf Brigham Young University}\end{flushleft}
-    \begin{flushright}Provo, UT\end{flushright}
+    \begin{flushleft}{\bf Oklahoma State University}\end{flushleft}
+    \begin{flushright}Stillwater, OK\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}Bachelor of Arts: Political Science\end{flushleft}
+    \begin{flushleft}Master of Arts: Philosophy\end{flushleft}
+  \end{multicols}
+\end{large}
+\vspace{-0.17cm}
+\begin{flushleft}Thesis: Evolution of Religious Belief and Naturalism: Agency, Character and Adaptation in Christian Belief\end{flushleft}
+\vspace{1.5pt}
+
+<!-- EDUCATION: 3RD BULLET -->
+\begin{large}
+  \begin{multicols}{2}
+    \begin{flushleft}{\bf Seattle Pacific University}\end{flushleft}
+    \begin{flushright}Seattle, WA\end{flushright}
+  \end{multicols}
+  \vspace{-0.17cm}
+  \begin{multicols}{2}
+    \begin{flushleft}Bachelor of Arts: Philosophy\end{flushleft}
   \end{multicols}
 \end{large}
 \vspace{1.5pt}
@@ -65,8 +84,8 @@ format:
   \hrule
 \end{large}
 \vspace{-0.16cm}
-**Languages and Tools** - *proficient:* Python, R, Bash *intermediate:* Spark, SQL, Tensorflow/Keras, Git, Docker  
-**Selected Coursework** - Deep Learning, Bayesian Machine Learning, Big Data Systems with Spark, Linear Models for Data Science, Statistical Learning, Data Engineering, Linear Algebra, Econometrics I & II, Data Visualization, Programming in Python
+**Languages and Tools** - *basic:* Python, R *intermediate:* Rmarkdown, LaTeX, Git
+**Selected Coursework** - Deep Learning for Humanists (Workshop, University of Victoria), NLP / Sentiment Analysis / Corpus Linguistics, Agents and Agency (Graduate Seminar Katheryn Lindeman), CoLiPhi Corpus Linguistics and Philosophy (Workshop, University of Zurich)
 
 
 <!-- EXPERIENCE : 1ST BULLET-->
@@ -74,96 +93,72 @@ format:
   \vspace{3pt}
   \hrule
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://www.dynata.com/}{Dynata}}\end{flushleft}
-    \begin{flushright}Aug 2022-Present\end{flushright}
+    \begin{flushleft}{\bf \href{https://https://www.stetson.edu/artsci/philosophy/}{Stetson University}}\end{flushleft}
+    \begin{flushright}Aug 2025-Present\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Data Scientist, Marketing}\end{flushleft}
-    \begin{flushright}Herndon, VA\end{flushright}\end
+    \begin{flushleft}\textit{Visiting Assistant Professor of Philosophy}\end{flushleft}
+    \begin{flushright}Deland, FL\end{flushright}\end
   {multicols}
 \end{large}
 \vspace{-0.16cm}
-* Delivered 30+ advanced analytical studies (MTA, drivers analysis, diff-in-diff) to high profile clients including 15+ to marketing teams at **Google and Meta**
-* Built diff-in-diff and multi-touch attribution model codebase in Python(OOP) for Ad Data Science Team. This codebase has **saved 100+ hours and brought over in $2 million in revenue to date**
+* Teach Logic, Aesthetics, Philosophy of Law, Intro to Philosophy—emphasizing reasoning, collaboration, and real-world applications.
 
 \vspace{7pt}
 
 <!-- EXPERIENCE : 2ND BULLET -->
 \begin{large}
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://archive.org/}{Internet Archive}}\end{flushleft}
-    \begin{flushright}Nov 2022-May 2023\end{flushright}
+  \begin{flushleft}{\bf \href{https://snorkel.ai}{Snorkel.ai}}\end{flushleft}
+    \begin{flushright}Jan 2025-Present\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Intern, Data Science}\end
-    {flushleft}\begin{flushright}Washington, D.C.\end
+    \begin{flushleft}\textit{Expert Contributor}\end
+    {flushleft}\begin{flushright}Remote\end
     {flushright}
   \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* **Solved entity resolution problem with Gradient Boosted Trees** \href{https://alexbass.me/projects/internet_archive/}{[here]} linking sparse wikipedia references to Internet Archive Database References
-* Implemented model in Python \href{https://github.com/acbass49/wiki2ia}{[here]} which, given a wikipedia reference, will return a match in the Internet Archive Database along with a probability of matching.
+* Authored and validated graduate-level, high-difficulty problems to test/enhance LLM reasoning, fluency, and problem-solving; contributed to proprietary datasets for AI fine-tuning, benchmarking, and reinforcement learning.
+* Identified reasoning flaws in AI-generated responses, refining outputs for rigorous, verifiable solutions—directly advancing LLMs for academia, industry collaboration, and real-time decision-making.
 
 \vspace{7pt}
 
 <!-- EXPERIENCE : 3RD BULLET -->
 \begin{large}
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://morningconsult.com/}{Morning Consult}}\end{flushleft}
-    \begin{flushright}Nov 2021-Aug 2022\end{flushright}
+    \begin{flushleft}{\bf \href{https://schf-org.github.io/SCHF-Org/}{Saleno Center for Human Flourishing}}\end{flushleft}
+    \begin{flushright}Aug 2024-Present\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Senior Data Analyst}\end
-    {flushleft}\begin{flushright}Washington, D.C.\end
+    \begin{flushleft}\textit{Founder, Director}\end
+    {flushleft}\begin{flushright}Saint Louis, MO\end
     {flushright}
   \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* **Developed and automated wave-over-wave statistical tests on time series data** in 17 tracker surveys of 5 countries
-* Led project to build a Python Web Bot (Selenium) to automate generation of test cases in surveys, contributed this to data science code base (used by 60+ data scientists)
-* Over 300+ requests, pulled data from API or large database into R, wrangled data using R, and output figures and tables
+* Lead SCHF project advancing human flourishing and moral well-being via interactive digital platforms (e.g., MMOs), investigating impacts on critical thinking, ethical reasoning, and moral decision-making for underserved youth.
+* Developed AI-driven tools to model ethical AI interactions, aligning with productivity platforms (e.g., PhiloQuest, a DND philosophical campgaign generator) that guide users to next-best actions.
 
 \vspace{7pt}
 
 <!-- EXPERIENCE : 4TH BULLET -->
 \begin{large}
   \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{https://echeloninsights.com/}{Echelon Insights}}\end{flushleft}
-    \begin{flushright}April 2020-Nov 2021\end{flushright}
+    \begin{flushleft}{\bf \href{https://www.lc.edu/}{Lewis and Clark Community College}}\end{flushleft}
+    \begin{flushright}August 2024 - May 2025\end{flushright}
   \end{multicols}
   \vspace{-0.17cm}
   \begin{multicols}{2}
-    \begin{flushleft}\textit{Research Analyst}\end{flushleft}
-    \begin{flushright}Alexandria, VA\end{flushright}
+    \begin{flushleft}\textit{Philosophy Instructor (Adjunct)}\end{flushleft}
+    \begin{flushright}Godfrey, IL\end{flushright}
   \end{multicols}
 \end{large}
 \vspace{-0.16cm}
-* Led in modeling projects **predicting election turnout for entire U.S. in 2022**, phone response rates, etc.
-* Wrangled, cleaned, weighted, or made presentations for 60+ survey datasets with R, SQL, and AWS
-* Using R Shiny, built a codeless-crosstab tool for company’s research team
-
-\vspace{7pt}
-
-<!-- EXPERIENCE : 5TH BULLET -->
-\begin{large}
-  \begin{multicols}{2}
-    \begin{flushleft}{\bf \href{http://csed.byu.edu/}{Center for Elections and Democracy}}\end{flushleft}
-    \begin{flushright}Dec 2018-April 2020\end{flushright}
-  \end{multicols}
-  \vspace{-0.17cm}
-  \begin{multicols}{2}
-    \begin{flushleft}\textit{Research Fellow}\end{flushleft}
-    \begin{flushright}Provo, UT\end{flushright}
-  \end{multicols}
-\end{large}
-\vspace{-0.16cm}
-* Designed and executed multiple survey experiments in original research projects
-* Mentored 60+ students in solving econometrics problems in weekly office hours
-* Visualized data using R creating 50+ informative figures for AFS official report \href{https://csed.byu.edu/0000017e-2611-d5d4-a57f-277126ef0001/american-family-survey-2019-report-pdf}{[here]}, news outlets, and professor’s projects
-
+* Contemporary Moral Problems (Ethics): Designed courses integrating AI ethics and collaborative problem-solving.
 \vspace{7pt}
 
 <!-- PERSONAL PROJECTS : 1ST BULLET -->
